Update: Swagger docs
